<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.account.AccountFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Total Balance Card -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen_8"
                app:cardBackgroundColor="@color/surface"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="@dimen/dimen_24">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/open_sans_semibold"
                        android:text="@string/text_total_across_accounts"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Caption" />

                    <TextView
                        android:id="@+id/totalAcrossAccounts"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/dimen_8"
                        android:fontFamily="@font/open_sans_bold"
                        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                        android:textColor="@color/blue_500"
                        tools:text="₹17,000" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <!-- Accounts List -->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_16"
                android:fontFamily="@font/open_sans_semibold"
                android:text="@string/text_your_accounts"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/accountsRv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8"
                tools:listitem="@layout/item_account_layout" />

            <!-- Transfer Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnTransfer"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_16"
                android:layout_marginTop="@dimen/dimen_24"
                android:layout_marginEnd="@dimen/dimen_16"
                android:text="@string/text_transfer" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/dimen_32"
        android:backgroundTint="@color/blue_500"
        android:contentDescription="@string/text_add_account"
        android:src="@drawable/ic_baseline_add"
        app:borderWidth="0dp"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
